# cliptoall

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  release.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
plugins/: PLUGIN-PROTOCOL.md
plugins/aumid-plugin/: Cargo.toml
plugins/aumid-plugin/src/: main.rs
plugins/encryption-plugin/: Cargo.toml
plugins/encryption-plugin/src/: crypto.rs  main.rs
plugins/examples/: README.md  hello.cs  hello.ps1  hello.py
plugins/plugin-template/: Cargo.toml
plugins/plugin-template/src/: main.rs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  results.json
src-tauri/src/: aumid.rs  main.rs  overlay.rs  plugins.rs
src-tauri/src/commands/: capture.rs  clipboard.rs  encryption.rs  gdrive_pool.rs  mod.rs  plugins.rs  settings.rs  upload_gdrive.rs  upload_s3.rs
src-tauri/src/utils/: autorun.rs  dpapi.rs  fs.rs  mod.rs
src/lib/: api.ts  help-texts.ts  plugin-templates.ts  plugin-types.ts  settings-general.css  settings-plugins.css  settings-shared.css  settings-storage.css  themes.ts  utils.ts
src/lib/stores/: session.svelte.ts  settings.ts  theme.ts
src/windows/: About.svelte  Editor.svelte  Results.svelte  Settings.svelte  SettingsGeneral.svelte  SettingsPlugins.svelte  SettingsStorage.svelte
