[package]
name = "cliptoall-tauri2"
version = "5.1.15"
description = "ClipToAll - Screenshot capture, annotation and upload tool"
authors = ["ultrathinker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
aws-config = "1.5"
aws-sdk-s3 = "1.50"
reqwest = { version = "0.12", features = ["json", "multipart"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
base64 = "0.22"
# Strong (v2) clipboard encryption: PBKDF2-HMAC-SHA256 KDF + AES-256-GCM.
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
getrandom = "0.2"
image = "0.25"
little_exif = "0.6"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
winreg = "0.52"
dirs = "5.0"
urlencoding = "2.1"
# Non-poisoning sync locks: a panic while holding the guard won't poison the
# lock, so one bug can't cascade into every later .lock() panicking (finding #7).
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Accessibility", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Security", "Win32_Security_Cryptography", "Win32_UI_Controls_Dialogs", "Win32_System_JobObjects"] }
