[package]
name = "aumid-plugin"
version = "1.0.0"
edition = "2021"
description = "ClipToAll plugin — ungroup/regroup windows on the Windows taskbar via AUMID"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Variant",
    "Win32_UI_Shell",
]
