[package]
name = "cliptoall-encryption-plugin"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
base64 = "0.22"
# Strong (v2) clipboard encryption: PBKDF2-HMAC-SHA256 KDF + AES-256-GCM.
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
getrandom = "0.2"
clipboard-win = "5.4"
